--- a/src/global.scss
+++ b/src/global.scss
@@ -13,6 +13,14 @@
 ion-item.align-button.in-list.item .input-wrapper{
   justify-content: center!important;
 }
-.qq{
-  background: red;
+.add-btn {
+  bottom: 10vh;
+  ion-fab-button{
+    button.fab-button-native{
+      background: red!important;
+    }
+    svg {
+      fill: green!important;
+    }
+  }
 }
