--- a/src/app/add-purchase/add-purchase.page.scss
+++ b/src/app/add-purchase/add-purchase.page.scss
@@ -1,7 +1,64 @@
-.cancel-fab{
-  .cancel-btn{
+app-add-purchase{
+
+}
+:host {
+  --ion-toolbar-background-color: #383840;
+}
+ion-header {
+  ion-toolbar {
+    .toolbar-container {
+      background-color: #383840!important;
+      ion-title{
+        font-weight: 500;
+        text-align: left!important;
+      }
+    }
+  }
+}
+
+ion-content {
+  section {
+    padding-bottom: 0;
+  }
+  background-color: #33333D;
+  ion-item {
+    background: #33333D;
+    --border-width: 0!important;
+    color: #a6a6a6;
+    ion-label {
+      margin-left: 15px;
+    }
+    .select-text {
+      color: #fff!important;
+    }
+  }
+  .alert {
+    background: #33333D;
+    color: #a6a6a6;
+  }
+  .select-container{
+    .select-text {
+      :host{
+        --padding-start: 0;
+      }
+      margin-left: -15px;
+      color: red!important;
+      //--padding-start: 0;
+    }
+    ion-item {
+      border-bottom: 1px solid #a6a6a6;
+      .input-wrapper {
+        color: #a6a6a6;
+      }
+    }
+
+  }
+}
+
+.cancel-fab {
+  .cancel-btn {
     right: 20px;
-    width:100px;
-    height:50px;
+    width: 100px;
+    height: 50px;
   }
 }
