--- a/src/app/main/main.page.scss
+++ b/src/app/main/main.page.scss
@@ -12,8 +12,8 @@ ion-content {
     //border: 1px solid red;
   }
   .inf-list {
-    .ion-list {
-      min-height:200vh;
+    ion-list {
+      min-height:25vh;
     }
     color: #000;
     animation: 0.7s slideInUp linear;
@@ -81,10 +81,10 @@ ion-content {
         content: '';
         background-color: #fff;
         position: absolute;
-        top: 42%;
+        top: 48%;
         left: -10%;
         width: 68px;
-        height: 39px;
+        height: 34px;
         border-bottom-left-radius: 68px;
         border-bottom-right-radius: 68px;
         z-index: -1;
@@ -98,7 +98,10 @@ ion-content {
     }
   }
 }
-
+.svg-card {
+  //overflow: ;
+  overflow: unset;
+}
 .decrease-color {
   color: red;
 }
@@ -162,7 +165,7 @@ ion-content {
 
 .price-card {
   position: relative;
-  height: 42vh;
+  height: 34vh;
   .price-card-content {
     color: #fff;
     position: absolute;
@@ -226,8 +229,13 @@ ion-infinite-scroll {
 
 ion-footer {
   ion-toolbar {
-    ion-button {
-      color: green;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    ion-buttons {
+      color: #fff;
+      font-size: 24px;
+      margin: 0 10px;
       .footer-btn {
         border: none!important;
         background: var(--buttonface, #f00);
