--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -1,24 +1,51 @@
-ion-item{
-  ion-label{
-    font-size:14px;
-  }
-
-  .submit-btn{
-
-  }
-  ion-item .item-native,
-  ion-item .item-inner{
-    border: none;
-  }
-
+:host {
+  --ion-toolbar-background-color: #383840;
 }
-.error-msg{
-  margin-top: 5px;
-  color: #b3171f;
-  font-size: 12px;
-  text-align: center;
-  display: block;
+ion-header {
+  ion-toolbar {
+    .toolbar-container {
+      ion-title{
+        font-weight: 500;
+        text-align: left!important;
+      }
+    }
+    ion-item {
+    }
+  }
 }
-.input-container{
-  height: 10vh;
+ion-content {
+  section {
+    padding-bottom: 0;
+  }
+  background-color: #33333D;
+  form {
+    background-color: #33333D;
+    color: #fff;
+    .input-container {
+      ion-item {
+        background: #33333D;
+        color: #fff;
+        border-bottom: 1px solid #fff;
+      }
+    }
+    .alert {
+      color: #a6a6a6;
+    }
+  }
+  .submit-btn {
+    color: #fff;
+    font-weight: 700;
+  }
+}
+.input-container {
+  height: 15vh;
+}
+.bottom-buttons {
+  margin-top: 10vh;
+  ion-label {
+    text-decoration: underline;
+  }
+}
+ion-back-button {
+  color: #fff;
 }
