--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -97,6 +97,14 @@
   --ion-color-shade: transparent;
   --ion-color-tint: transparent;
 }
+.ion-color-orange {
+  --ion-color-base: #F9AA33;
+  --ion-color-base-rgb: #F9AA33;
+  --ion-color-contrast: #F9AA33;
+  --ion-color-contrast-rgb: #F9AA33;
+  --ion-color-shade: #F9AA33;
+  --ion-color-tint: #F9AA33;
+}
 .ion-color-white {
   --ion-color-base: #fff;
   --ion-color-base-rgb: #fff;
