--- a/src/app/forgot/forgot.page.html
+++ b/src/app/forgot/forgot.page.html
@@ -1,37 +1,41 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>forgot</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button></ion-back-button>
+        </ion-buttons>
+        <ion-title color="white">forgot password</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-list>
-    <ion-list-header>
-      <ion-label>
-        Forgot password
-      </ion-label>
-    </ion-list-header>
-    <form [formGroup]="forgotForm">
-      <div class="input-container">
-        <ion-item>
-          <!--<ion-label position="fixed">Enter email</ion-label>-->
-          <ion-input name="email" formControlName="email" placeholder="Enter email"></ion-input>
-        </ion-item>
-        <div *ngIf="email.invalid && (email.dirty || email.touched)" color="danger" class="alert alert-danger">
-          <span class="error-msg">{{ getErrorMessage('email') }}</span>
-        </div>
-      </div>
-      <ion-item class="submit-btn-container">
-        <ion-grid>
-          <ion-row justify-content-center>
-            <ion-col size="12">
-              <ion-button slot="" size="normal" class="submit-btn ion-col-3" color="primary"
-                          (click)="submitForgot()">Submit
-              </ion-button>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </ion-item>
-    </form>
-  </ion-list>
+    <ion-list>
+        <form [formGroup]="forgotForm">
+            <div class="input-container">
+                <ion-item>
+                    <!--<ion-label position="fixed">Enter email</ion-label>-->
+                    <ion-input name="email" formControlName="email" placeholder="Enter email for restore password"></ion-input>
+                </ion-item>
+                <div *ngIf="email.invalid && (email.dirty || email.touched)" color="danger" class="alert alert-danger">
+                    <span class="error-msg">{{ getErrorMessage('email') }}</span>
+                </div>
+            </div>
+            <ion-item class="submit-btn-container">
+                <ion-grid>
+                    <ion-row justify-content-center>
+                        <ion-col size="12">
+                            <ion-button
+                                slot=""
+                                size="normal"
+                                class="submit-btn ion-col-3"
+                                (click)="submitForgot()"
+                                [disabled]="!forgotForm.valid"
+                                color="orange">
+                                Submit
+                            </ion-button>
+                        </ion-col>
+                    </ion-row>
+                </ion-grid>
+            </ion-item>
+        </form>
+    </ion-list>
 </ion-content>
